issue-194 | Update the surefire plugin for Java 11 compatibility
Added an explicit dependency on the surefire plugin to make the version
used consistent. Specified a version compatible with Java 11 and added
command line arguments to prevent crashes as per:
https://stackoverflow.com/a/33757854